name:                s2hl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/denibertovic/s2hl#readme
license:             BSD3
license-file:        LICENSE
author:              Deni Bertovic
maintainer:          deni@denibertovic.com
copyright:           BSD3
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     S2HL.Lib
                     , S2HL.Options
                     , S2HL.Types

  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , text
                     , directory >= 1.2.5.0
                     , filepath
                     , cassava
                     , bytestring
                     , vector
                     , hastache
                     , containers
                     , time
                     , tagsoup
                     , scalpel
  default-language:    Haskell2010

executable s2hl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , s2hl
                     , optparse-applicative
                     , text
                     , parsec
  default-language:    Haskell2010

test-suite s2hl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , s2hl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/denibertovic/s2hl
